--- a/player.html
+++ b/player.html
@@ -4,11 +4,24 @@
 	  img-tube
     </title>
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" >
+	<link type="text/css" rel="stylesheet" href="css/flat-ui.min.css">
+    <link type="text/css" rel="stylesheet" href="css/application.css" >
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/ajax.js" ></script>
 	<script>refresh();</script>
   </head>
   <body>
-	 
+	<div class="container">
+		<div id="header">
+			<div class="col-md-offset-4 col-md-4"><h1 style="margin-bottom:0;">Streaming</h1></div>
+			<div class="col-md-offset-4 col-md-4"><h4 style="margin-bottom:0;">Made with Love  <span class="fui-heart"></span></h4></div>
+			<div class="col-md-offset-4 col-md-4"><h4>by IMG</h4></div>
+			<!-- <div class="col-md-offset-3 col-md-6">
+				<h4 style="margin-bottom:0; color:rgba(52,73,94,1)">
+				<a href="/stream">Stream your favourite song.</a>
+				</h4>
+			</div> -->
+		</div>
+	</div>
   </body>
 </html>
