Make minor modifications in content of player.html

--- a/player.html
+++ b/player.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>
-	  img-tube
+	  IMG-stream
     </title>
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" >
 	<link type="text/css" rel="stylesheet" href="css/flat-ui.min.css">
@@ -12,9 +12,10 @@
   </head>
   <body>
 	<div class="container">
+   
 		<div id="header">
 			<div class="col-md-offset-4 col-md-4"><h1 style="margin-bottom:0;">Streaming</h1></div>
-			<div class="col-md-offset-4 col-md-4"><h4 style="margin-bottom:0;">Made with Love  <span class="fui-heart"></span></h4></div>
+			<div class="col-md-offset-4 col-md-4"><h4 style="margin-bottom:0;">Made with  <span class="fui-heart"></span></h4></div>
 			<div class="col-md-offset-4 col-md-4"><h4>by IMG</h4></div>
 			<!-- <div class="col-md-offset-3 col-md-6">
 				<h4 style="margin-bottom:0; color:rgba(52,73,94,1)">
@@ -22,6 +23,7 @@
 				</h4>
 			</div> -->
 		</div>
+    <div id="player"></div>
 	</div>
   </body>
 </html>
